<resources>
    <string name="app_name">DJI-SDK-DEMO</string>
    <string name="camera_connection_ok">Connected</string>
    <string name="camera_connection_break">Disconnect</string>
    <string name="title_activity_select_drone">SelectDroneTypeActivity</string>
    <string name="press_again_exit">Press again to exit application</string>
    <string name="drone_type_title_p2v">Phantom 2 Vision/Phantom 2 Vision+</string>
    <string name="drone_type_desc_p2v">showing how to use the sdk interface for p2v/p2v+</string>
    <string name="drone_type_title_inspire1">Inspire 1/Phantom 3 Professional</string>
    <string name="drone_type_desc_inspire1">showing how to use the sdk interface for inspire1/Phantom 3 Professional</string>
    <string name="drone_type_title_p3s">Phantom 3 Advanced</string>
    <string name="drone_type_desc_p3s">showing how to use the sdk interface for Phantom 3 Advanced</string>
    <string name="drone_type_title_m100">Matrice 100</string>
    <string name="drone_type_desc_m100">showing how to use the sdk interface for Matrice 100</string>
    <string name="title_activity_mainactivity">MainActivity</string>
    <string name="demo_title_preview">Video Preview</string>
    <string name="demo_desc_preview">show the camera video preview</string>
    <string name="demo_hw_decode_desc_preview">show the camera video preview(Hardware Decode)</string>
    <string name="demo_title_camera_protocol">Camera Protocol</string>
    <string name="demo_desc_camera_protocol">test the camera protocol</string>
    <string name="demo_title_main_controller_protocol">Main Controller State</string>
    <string name="demo_desc_main_controller_protocol">show the state of main controller</string>
    <string name="demo_title_battery_protocol">Battery Info</string>
    <string name="demo_desc_battery_protocol">show the infomation of battery</string>
    <string name="demo_title_gimbal_protocol">Gimbal Protocol</string>
    <string name="demo_desc_gimbal_protocol">test the gimbal protocol</string>
    <string name="demo_title_gs_protocol">Ground Station Protocol</string>
    <string name="demo_desc_gs_protocol">test the ground station protocol</string>
    <string name="demo_title_gs_protocol_joystick">Ground Station Protocol(With joystick ui)</string>
    <string name="demo_desc_gs_protocol_joystick">test the ground station protocol(With joystick ui)</string>
    <string name="demo_title_range_extender">Range Extender</string>
    <string name="demo_desc_range_extender">test range extender interface</string>
    <string name="demo_title_media_sync">Media Sync</string>
    <string name="demo_desc_media_sync">test media sync interface</string>
    <string name="demo_title_image_transmitter_protocol">Image Transmitter Demo</string>
    <string name="demo_desc_image_transmitter_protocol">test image transmitter interface</string>
    <string name="demo_title_gs_ioc_protocol">Ground Station Ioc Protocol</string>
    <string name="demo_desc_gs_ioc_protocol">test the ground station ioc protocol</string>
    <string name="demo_title_get_video_frame">Get video frame data only</string>
    <string name="demo_desc_get_video_frame">show the method for get video frame data only</string>
    <string name="demo_activation_message_title">Activation Message</string>
    <string name="demo_activation_error">Activation Error: </string>
    <string name="demo_activation_error_code">Error Code: </string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_camera_protocol_demo">CameraProtocolDemoActivity</string>
    <string name="camera_start_take_photo">Start Take Photo</string>
    <string name="camera_stop_take_photo">Stop Take Photo</string>
    <string name="camera_start_recording">Start Recording</string>
    <string name="camera_stop_recording">Stop Recording</string>
    <string name="camera_set_photosize">Set Photo Size</string>
    <string name="camera_get_photosize">Get Photo Size</string>
    <string name="camera_set_iso">Set ISO</string>
    <string name="camera_get_iso">Get ISO</string>
    <string name="camera_set_whitebalance">Set White Balance</string>
    <string name="camera_get_whitebalance">Get White Balance</string>
    <string name="camera_set_exposuremetering">Set Exposure Metering</string>
    <string name="camera_get_exposuremetering">Get Exposure Metering</string>
    <string name="camera_set_exposurecompensation">Set Exposure Compensation</string>
    <string name="camera_get_exposurecompensation">Get Exposure Compensation</string>
    <string name="camera_set_antiflicker">Set AntiFlicker</string>
    <string name="camera_get_antiflicker">Get AntiFlicker</string>
    <string name="camera_set_sharpness">Set Sharpness</string>
    <string name="camera_get_sharpness">Get Sharpness</string>
    <string name="camera_set_contrast">Set Contrast</string>
    <string name="camera_get_contrast">Get Contrast</string>
    <string name="camera_set_mutiphotocount">Set MutiPhoto Count</string>
    <string name="camera_get_mutiphotocount">Get MutiPhoto Count</string>
    <string name="camera_set_cameraaction">Set Camera Action</string>
    <string name="camera_get_cameraaction">Get Camera Action</string>
    <string name="camera_set_photoformat">Set Photo Format</string>
    <string name="camera_get_photoformat">Get Photo Format</string>
    <string name="camera_set_recordingparam">Set Recording Param</string>
    <string name="camera_get_recordingparam">Get Recording Param</string>
    <string name="camera_set_continuousparam">Set Continuous Param</string>
    <string name="camera_get_continuousparam">Get Continuous Param</string>
    <string name="camera_set_mode">Set Camera Mode</string>
    <string name="camera_get_version">Get Camera Version</string>
    <string name="camera_get_visiontype">Get Vision Type</string>
    <string name="camera_get_connectisok">Get Connect Is Ok</string>
    <string name="camera_sync_time">Sync Time</string>
    <string name="camera_save_config">Save Config</string>
    <string name="camera_restore_default">Restore Default</string>
    <string name="camera_format_sdcard">Format SDCard</string>
    <string-array name="isoValues">
        <item>Auto</item>
        <item>100</item>
        <item>200</item>
        <item>400</item>
        <item>800</item>
        <item>1600</item>
        <item>3200</item>
    </string-array>
    <string-array name="photosizeValues">
        <item>Default</item>
        <item>4384x3288</item>
        <item>4384x2922</item>
        <item>4384x2466</item>
        <item>4608x3456</item>
    </string-array>
    <string-array name="whitebalanceValues">
        <item>Auto</item>
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Water Surface</item>
        <item>Indoor_Incandescent</item>
        <item>Indoor_Fluorescent</item>
    </string-array>
    <string-array name="whitebalanceValues_vision">
        <item>Auto</item>
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Indoor</item>
    </string-array>
    <string-array name="exposuremeteringValues">
        <item>Center</item>
        <item>Average</item>
        <item>Point</item>
    </string-array>
    <string-array name="exposurecompensationValues">
        <item>Default</item>
        <item>-2.0</item>
        <item>-1.7</item>
        <item>-1.3</item>
        <item>-1.0</item>
        <item>-0.7</item>
        <item>-0.3</item>
        <item>0.0</item>
        <item>0.3</item>
        <item>0.7</item>
        <item>1.0</item>
        <item>1.3</item>
        <item>1.7</item>
        <item>2.0</item>
    </string-array>
    <string-array name="antiflickerValues">
        <item>Auto</item>
        <item>60Hz</item>
        <item>50Hz</item>
    </string-array>
    <string-array name="sharpnessValues">
        <item>Standard</item>
        <item>Hard</item>
        <item>Soft</item>
    </string-array>
    <string-array name="contrastValues">
        <item>Standard</item>
        <item>Hard</item>
        <item>Soft</item>
    </string-array>
    <string-array name="multishotValues">
        <item>Shot 3</item>
        <item>Shot 5</item>
    </string-array>
    <string-array name="cameraactionValues">
        <item>Keep Current State</item>
        <item>Enter Contiuous Shooting</item>
        <item>Enter Recording</item>
    </string-array>
    <string-array name="photoformatValues">
        <item>Raw</item>
        <item>Jpeg</item>
    </string-array>
    <string-array name="cameramodeValues">
        <item>Camera</item>
        <item>Usb</item>
    </string-array>
    <string-array name="recordingResolutionValues">
        <item>Default</item>
        <item>480P 30</item>
        <item>720P 30</item>
        <item>720P 60</item>
        <item>960P 30</item>
        <item>1080P 30</item>
        <item>1080I 60</item>
    </string-array>
    <string-array name="recordingFovValues">
        <item>FOV0</item>
        <item>FOV1</item>
        <item>FOV2</item>
    </string-array>
    <string name="title_activity_gimbal_demo">GimbalDemoActivity</string>
    <string name="gimbal_pitch">PITCH</string>
    <string name="gimbal_pitch_up">  +  </string>
    <string name="gimbal_pitch_down">  -  </string>
    <string name="gimbal_pitch_go">  GO  </string>
    <string name="gimbal_yaw">YAW</string>
    <string name="gimbal_yaw_left"> &lt;- </string>
    <string name="gimbal_yaw_right"> -&gt; </string>
    <string name="gimbal_yaw_stop">yaw stop</string>
    <string name="gimbal_yaw_rotate_takephoto"> yaw rotate\ntakephoto</string>
    <string name="down_result">Download Result</string>
    <string name="gimbal_roll">ROLL</string>
    <string name="gimbal_switch">Switch</string>
    <string name="gimbal_auto_calibration">AutoCalibration</string>
    <string name="gimbal_set_fpv">StartFPV</string>
    <string name="gimbal_roll_finetune">RollFinetune</string>
    <string name="gimbal_roll_finetune_minus">-</string>
    <string name="gimbal_roll_finetune_plus">+</string>
    <string name="gimbal_customer_setting">Setting</string>
    <string name="gimbal_pitch_sensitivity">PitchSensitivity:</string>
    <string name="gimbal_roll_sensitivity">RollSensitivity:</string>
    <string name="gimbal_yaw_sensitivity">YawSensitivity:</string>
    <string name="gimbal_pitch_action_params">PitchActionParams:</string>
    <string name="gimbal_roll_action_params">RollActionParams:</string>
    <string name="gimbal_yaw_action_params">YawActionParams:</string>
    <string name="gimbal_sensitivity_value">1~100</string>
    <string name="gimbal_get_customer_setting">GetParams</string>
    <string name="gimbal_save_customer_setting">Save</string>
    <string name="gs_open_ground_station">1. Open Ground Station</string>
    <string name="gs_add_waypoint">2. Add waypoint(10m)</string>
    <string name="gs_remove_waypoint">2-0. Remove waypoint</string>
    <string name="gs_set_loop">2-1. SetLoop</string>
    <string name="gs_upload_waypoint">3. Upload Waypoint</string>
    <string name="gs_take_off">4. Take Off</string>
    <string name="gs_go_home">5. Go Home</string>
    <string name="gs_close_ground_station">6. Close Ground Station</string>
    <string name="gs_pasue">Pause</string>
    <string name="gs_resume">Resume</string>
    <string name="gs_joystick_plus">  +  </string>
    <string name="gs_joystick_minus">  -  </string>
    <string name="gs_joystick_stop">Stop</string>
    <string name="gs_joystick_pitch">Pitch</string>
    <string name="gs_joystick_roll">Roll</string>
    <string name="gs_joystick_throttle">Throttle</string>
    <string name="gs_ioc_open_ground_station">1. Open Ground Station</string>
    <string name="gs_ioc_enter_ioc_mode">2. Enter Ioc Mode</string>
    <string name="gs_ioc_exit_ioc_mode">3. Exit Ioc Mode</string>
    <string name="gs_ioc_close_ground_station">4. Close Ground Station</string>
</resources>