<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_content_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:background="@color/dark" >

      <RelativeLayout
      android:id="@+id/surfaceView_Rl_gs_ioc"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_marginBottom="0dp">
      
        <dji.sdk.widget.DjiGLSurfaceView
          android:id="@+id/DjiSurfaceView_gs"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"/>

      </RelativeLayout>
      
      <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/black_overlay">
        
        <ImageButton
            android:id="@+id/ReturnBtnGsIoc"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="onReturn"
            android:scaleType="centerInside"
            android:src="@drawable/selector_back_button" />

        <TextView
            android:id="@+id/ConnectStateGsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text=""
            android:textSize="21sp" />

      </RelativeLayout>
      
      <ScrollView
        android:id="@+id/scrollViewGsIoc"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
        <Button
        android:id="@+id/OpenGsButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"  
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/gs_ioc_open_ground_station" />   

        <Button
        android:id="@+id/EnterIocButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"  
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/gs_ioc_enter_ioc_mode" />  
        
        <Button
        android:id="@+id/ExitIocButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/gs_ioc_exit_ioc_mode"/>

        <Button
        android:id="@+id/CloseGsButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"  
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/gs_ioc_close_ground_station" />  
        
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
